--- a/NLP&PySpark/text_models.ipynb
+++ b/NLP&PySpark/text_models.ipynb
@@ -5,8 +5,7 @@
    "metadata": {},
    "source": [
     "# Qualifications analysis for data jobs\n",
-    "#### TeamBanov\n",
-    "#### Henriett Kapui, Aleksandar Banov, Matthias Humer\n",
+    "#### Aleksandar Banov\n",
     "\n",
     "\n",
     "\n",
