--- a/NLP&PySpark/text_models.ipynb
+++ b/NLP&PySpark/text_models.ipynb
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **karriere_3_classes** dataset that we scraped from Karriere.at with Selenium. After that we preprocessed and cleaned the data. **IMPORTANT NOTE** **Unfortunately as of writing this we are locked out of Jupiter and important files relating to the preprocessing of the data and more are out of our reach as we are concluding the project.**"
+    "The **karriere_3_classes** dataset that we scraped from Karriere.at with Selenium. After that we preprocessed and cleaned the data."
    ]
   },
   {
